--- a/index.html
+++ b/index.html
@@ -41,68 +41,68 @@
         <li class="nav-item d-flex align-items-center mb-2 p-2">
           <a href="#about" class="nav-link">About</a>
         </li>
+        <li class="nav-item d-flex align-items-center mb-2 p-2">
+          <a href="scnde_page.html" class="nav-link">seconde page of template</a>
+        </li>
       </ul>
     </div>
-
         <button class="btn btn-dark rounded-pill">
           Sign in
           <i class="ri-search-line mx-2"></i>
           <i class="ri-shopping-bag-line mx-2"></i>
         </button>
-
-
     </div>
   </div>
 </nav>
 <section id="hero-secteur" class="py-5">
-    <div class="container mt-5" >
-      <div class="row">
-        <div class="col-md-6 mt-5">
-          <h1 class="display-3 fw-bold">Find your perfect</h1>
-          <h1 class="display-3 fw-bold"">eyewear look</h1>
-          <p>We're all about finding you that perfect pair. Experience the difference a perfect pair makes. Let's find yours together.</p>
-          <button type="button" class="btn btn-dark rounded-pill">Explore shop</button>
-          <button type="button" class="btn btn-light rounded-pill border border-2 border-secondary">Use Your benefits</button>
-        </div>
-        <div class="col-md-6">
-          <div class="container mt-5">
-            <div class="row">
-              <div class="col-md-4 mb-4">
-                <div class="card rounded h-100">
-                  <img src="img/photo1.jpg" class="card-img rounded img-fluid" alt="Image de Fond">
-                </div>
+  <div class="container mt-5">
+    <div class="row">
+      <div class="col-md-6 mt-5">
+        <h1 class="display-3 fw-bold">Find your perfect</h1>
+        <h1 class="display-3 fw-bold">eyewear look</h1>
+        <p>We're all about finding you that perfect pair. Experience the difference a perfect pair makes. Let's find yours together.</p>
+        <button type="button" class="btn btn-dark rounded-pill">Explore shop</button>
+        <button type="button" class="btn btn-light rounded-pill border border-2 border-secondary">Use Your benefits</button>
+        <img src="img/trustpilot.png" class="mt-3 rounded-top" width="587" height="157">
+      </div>
+      <div class="col-md-6">
+        <div class="container mt-5 h-100">
+          <div class="row h-100">
+            <div class="col-md-4 mb-4">
+              <div class="card rounded h-100 d-flex flex-column">
+                <img src="img/photo1.jpg" class="card-img rounded img-fluid flex-grow-1" alt="Image de Fond" style="object-fit: cover;">
               </div>
-              <div class="col-md-4 mb-4">
-                <div class="card rounded h-100">
-                  <img src="img/photo2.jpg" class="card-img rounded img-fluid" alt="Image de Fond">
-                </div>
+            </div>
+            <div class="col-md-4 mb-4">
+              <div class="card rounded h-100 d-flex flex-column">
+                <img src="img/photo2.jpg" class="card-img rounded img-fluid flex-grow-1" alt="Image de Fond" style="object-fit: cover;">
               </div>
-              <div class="col-md-4 mb-4">
-                <div class="card rounded h-100">
-                  <img src="img/photo3.jpg" class="card-img rounded img-fluid" alt="Image de Fond">
-                </div>
+            </div>
+            <div class="col-md-4 mb-4">
+              <div class="card rounded h-100 d-flex flex-column">
+                <img src="img/photo3.jpg" class="card-img rounded img-fluid flex-grow-1" alt="Image de Fond" style="object-fit: cover;">
               </div>
             </div>
           </div>
         </div>
       </div>
+
     </div>
+  </div>
 </section>
 <section id="new-arrivals" class="py-5">
   <div class="container mt-5">
     <div class="row align-items-center">
       <div class="col-md-6">
-        <h1 class=" display-5 fw-bold text-left mb-4">New Arrivals</h1>
+        <h1 class="display-5 fw-bold text-left mb-4">New Arrivals</h1>
       </div>
-      <div class="col-md-6 ml-auto">
-        <p>See All</p>
+      <div class="col-md-4">
+        <p class="text-end"><strong>See All</strong></p>
       </div>
-
     </div>
-
     <div class="row">
       <div class="col-md-4 mb-4">
-        <div class="card-arrivals border-0 d-flex flex-column justify-content-between">
+        <div class="card-arrivals border-0 d-flex flex-column justify-content-between h-100">
           <div class="row">
             <div class="col-md-6">
               <p class="badge bg-white text-dark rounded-pill m-3">Best Sellers</p>
@@ -119,16 +119,19 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-md-12 text-center">
-              <p>AP2548 Optics</p>
-              <p> Alex Perry</p>
-              <p>$187.99</p>
+            <div class="col-md-8">
+              <p class="mt-5 ms-2">AP2548 Optics<br>
+                Alex Perry<br>
+                $187.99</p>
+            </div>
+            <div class="col-md-4">
+              <img src="img/id.png" class="img-fluid rounded align-self-end mt-5" alt="image">
             </div>
           </div>
         </div>
       </div>
       <div class="col-md-4 mb-4">
-        <div class="card-arrivals border-0 d-flex flex-column justify-content-between">
+        <div class="card-arrivals border-0 d-flex flex-column justify-content-between h-100">
           <div class="row">
             <div class="col-md-6">
               <p class="badge bg-white text-dark rounded-pill m-3">Best Sellers</p>
@@ -145,16 +148,19 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-md-12 text-center">
-              <p>AP2548 Optics</p>
-              <p> Alex Perry</p>
-              <p>$187.99</p>
+            <div class="col-md-8">
+              <p class="mt-5 ms-2">AP2548 Optics<br>
+                Alex Perry<br>
+                $187.99</p>
+            </div>
+            <div class="col-md-4">
+              <img src="img/id.png" class="img-fluid rounded align-self-end mt-5" alt="image">
             </div>
           </div>
         </div>
       </div>
       <div class="col-md-4 mb-4">
-        <div class="card-arrivals border-0 d-flex flex-column justify-content-between">
+        <div class="card-arrivals border-0 d-flex flex-column justify-content-between h-100">
           <div class="row">
             <div class="col-md-6">
               <p class="badge bg-white text-dark rounded-pill m-3">Best Sellers</p>
@@ -171,15 +177,19 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-md-12 text-center">
-              <p>AP2548 Optics</p>
-              <p> Alex Perry</p>
-              <p>$187.99</p>
+            <div class="col-md-8">
+              <p class="mt-5 ms-2">AP2548 Optics<br>
+                Alex Perry<br>
+                $187.99</p>
+            </div>
+            <div class="col-md-4">
+              <img src="img/id.png" class="img-fluid rounded align-self-end mt-5" alt="image">
             </div>
           </div>
         </div>
       </div>
     </div>
+  </div>
   </div>
 </section>
 
@@ -187,8 +197,8 @@
   <div class="container mt-5">
     <div class="row">
       <h1 class="display-5 fw-bold text-left mb-4 text-center">Personalized</h1>
-        <h1 class="  display-5 fw-bold text-left mb-4 text-center"> eyecare for you</h1>
-      <p class="text-center">Select one card to find the perfect style or lenses, according to your needs.</p>
+        <h1 class="  display-5 fw-bold text-left mb-4 text-center"> eyecare for you.</h1>
+      <p class="text-center font-weight-bold">Select one card to find the perfect style or lenses, according to your needs.</p>
     </div>
     <div class="row">
       <div class="col-md-3 mb-4">
@@ -214,8 +224,8 @@
             </div>
           </div>
           <div class="card-img-overlay d-flex flex-column justify-content-end align-items-start">
-            <h5 class="card-title">Toujours en Mouvement</h5>
-            <p class="card-text">Naviguez à chaque trajet : Compagnon visuel pour l'enthousiaste toujours en mouvement</p>
+            <h5 class="card-title">Great gamer</h5>
+            <p class="card-text">Level up your gaming experience with glasses designed for the Great Gamer in you</p>
           </div>
         </div>
       </div>
