--- a/scnde_page.html
+++ b/scnde_page.html
@@ -22,7 +22,7 @@
 </head>
 <body>
 <header>
-  <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 fixed-top mb-4 mb-lg-5">
+  <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 mb-4 mb-lg-5">
     <div class="container">
       <a href="#" class="navbar-brand"><h3>Focal</h3></a>
       <button
@@ -64,29 +64,71 @@
     </div>
   </nav>
 </header>
-<section class="container mt-5"> <!-- Utilisation de la classe mt-5 pour une marge supérieure plus importante -->
+<section class="container mt-5">
+  <div class="row">
+    <div class="col">
+      <h2 class="text-center">Unrivalled Excellence</h2>
+      <p class="text-center">Select one card to find the perfect style or lenses, according to your needs.</p>
+    </div>
+  </div>
+</section>
+<section class="container-fluid mt-5 d-flex justify-content-center align-items-center">
   <div class="row">
     <div class="col-md-8">
       <div class="mt-3 mb-3 h-100">
-        <img src="img/img1.png" class="rounded-top img-fluid h-100 w-100" >
+        <img src="img/img1.png" class="img-fluid rounded h-100 w-150" >
       </div>
     </div>
-    <div class="col-md-4">
+    <div class="col-md">
       <div class="mt-3 mb-3 h-100">
-        <img src="img/img2.png" alt="Opticien" class="img-fluid h-100 w-100">
+        <img src="img/img2.png" alt="Opticien" class="img-fluid rounded h-100 w-90">
       </div>
     </div>
   </div>
 </section>
-<section id="bestsellers" class="py-5">
+
+<section class="container-fluid mt-5 d-flex justify-content-center align-items-center">
+  <img  class="img-fluid rounded w-50" src="img/img3.png">
+</section>
+
+<section class="container-fluid mt-5 d-flex justify-content-center align-items-center">
+  <div class="row">
+    <div class="col-md">
+      <div class="mt-3 mb-3 h-100">
+        <img src="img/img4.png" class="img-fluid rounded h-100 w-80" >
+      </div>
+    </div>
+    <div class="col-md">
+      <div class="mt-3 mb-3 h-100">
+        <img src="img/img5.png" alt="Opticien" class="img-fluid rounded h-100 w-200">
+      </div>
+    </div>
+  </div>
+</section>
+
+
+<section id="bestsellers" class="py-5 mt-5">
   <div class="container mt-5">
     <div class="row align-items-center">
       <div class="col-md-6">
         <h1 class="display-5 fw-bold text-left mb-4">Bestsellers</h1>
       </div>
-      <div class="col-md-4">
-        <p class="text-end"><strong>See All</strong></p>
+      <div class="col-md-5">
+        <p class="text-end">
+          <button class="btn btn-light btn-circle">
+            <i class="ri-arrow-left-s-line circle-icon"></i> <!-- Icône Remixicon flèche vers la gauche -->
+          </button>
+          <strong> <!-- Optionnel, si vous voulez garder le texte "See All" -->
+            <button class="btn btn-light btn-circle">
+              <i class="ri-arrow-right-s-line circle-icon"></i> <!-- Icône Remixicon flèche vers la droite -->
+            </button>
+          </strong>
+        </p>
       </div>
+
+
+
+
     </div>
     <div class="row">
       <div class="col-md-4 mb-4">
